Adicionando o HTML e CSS da seção de preços

--- a/index.html
+++ b/index.html
@@ -173,7 +173,52 @@
 
             <!--==================== CHOOSE US ====================-->
             <section class="choose section" id="choose">
-                
+                <div class="choose__overflow">
+                    <div class="choose__container container grid">
+                        <div class="choose__content">
+                            <div class="section__data">
+                                <h2 class="section__subtitle">Best Reason</h2>
+                                <div class="section__titles">
+                                    <h1 class="section__title-border">WHY</h1>
+                                    <h1 class="section__titles">CHOOSE US</h1>
+                                </div>
+                            </div>
+
+                            <p class="choose__description">
+                                Choose your favorite class and start now. Remember the 
+                                only bad workout is the one you didn't do.
+                            </p>
+
+                            <div class="choose__data">
+                                <div class="choose__group">
+                                    <h3 class="choose__number">200+</h3>
+                                    <p class="choose_subtitle">Total Members</p>
+                                </div>
+                                <div class="choose__group">
+                                    <h3 class="choose__number">50+</h3>
+                                    <p class="choose_subtitle">Best trainers</p>
+                                </div>
+                                <div class="choose__group">
+                                    <h3 class="choose__number">25+</h3>
+                                    <p class="choose_subtitle">Programs
+                                    </p>
+                                </div>
+                                <div class="choose__group">
+                                    <h3 class="choose__number">100+</h3>
+                                    <p class="choose_subtitle">Awards</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="choose__images">
+                            <img src="assets/img/choose-img.png" alt="choose image" class="choose__img">
+
+                            <div class="choose__triangle choose__triangle-1"></div>
+                            <div class="choose__triangle choose__triangle-2"></div>
+                            <div class="choose__triangle choose__triangle-3"></div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== PRICING ====================-->
@@ -183,7 +228,114 @@
 
             <!--==================== CALCULATE ====================-->
             <section class="calculate section">
-                
+                <div class="container">
+                    <div class="section__data">
+                        <h2 class="section__subtitle">Pricing</h2>
+                        <div class="section__titles">
+                            <h1 class="section__title-border">OUR</h1>
+                            <h1 class="section__titles">SPECIAL PLAN</h1>
+                        </div>
+                    </div>
+
+                    <div class="pricing__container grid">
+                        <article class="pricing__card">
+                            <header class="pricing__header">
+                                <div class="pricing__shape">
+                                    <img src="assets/img/pricing1.png" alt="pricing image" class="pricing__img">
+                                </div>
+
+                                <h1 class="pricing__title">BASIC PACKAGE</h1>
+                                <h2 class="pricing__number">$200</h2>
+                            </header>
+
+                            <ul class="pricing__list">
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>5 Days In A Week
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>01 Sweatshirt
+                                </li>
+                                <li class="pricing__item pricing__item-opacity">
+                                    <i class="ri-checkbox-blank-circle-line"></i>01 Bottle of Protein
+                                </li>
+                                <li class="pricing__item pricing__item-opacity">
+                                    <i class="ri-checkbox-blank-circle-line"></i>Access to Videos
+                                </li>
+                                <li class="pricing__item pricing__item-opacity">
+                                    <i class="ri-checkbox-blank-circle-line"></i>Muscle Stretching
+                                </li>
+                            </ul>
+
+                            <a href="#" class="button button__flex pricing__button">
+                                Purchase Now <i class="ri-arrow-right-line"></i>
+                            </a>
+                        </article>
+                        <article class="pricing__card pricing__card-active">
+                            <header class="pricing__header">
+                                <div class="pricing__shape">
+                                    <img src="assets/img/pricing2.png" alt="pricing image" class="pricing__img">
+                                </div>
+
+                                <h1 class="pricing__title">PREMIUM PACKAGE</h1>
+                                <h2 class="pricing__number">$240</h2>
+                            </header>
+
+                            <ul class="pricing__list">
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>5 Days In A Week
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>01 Sweatshirt
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>01 Bottle of Protein
+                                </li>
+                                <li class="pricing__item pricing__item-opacity">
+                                    <i class="ri-checkbox-blank-circle-line"></i>Access to Videos
+                                </li>
+                                <li class="pricing__item pricing__item-opacity">
+                                    <i class="ri-checkbox-blank-circle-line"></i>Muscle Stretching
+                                </li>
+                            </ul>
+
+                            <a href="#" class="button button__flex pricing__button">
+                                Purchase Now <i class="ri-arrow-right-line"></i>
+                            </a>
+                        </article>
+                        <article class="pricing__card">
+                            <header class="pricing__header">
+                                <div class="pricing__shape">
+                                    <img src="assets/img/pricing3.png" alt="pricing image" class="pricing__img">
+                                </div>
+
+                                <h1 class="pricing__title">DIAMOND PACKAGE                                </h1>
+                                <h2 class="pricing__number">$200</h2>
+                            </header>
+
+                            <ul class="pricing__list">
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>5 Days In A Week
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>01 Sweatshirt
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>01 Bottle of Protein
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>Access to Videos
+                                </li>
+                                <li class="pricing__item">
+                                    <i class="ri-checkbox-circle-line"></i>Muscle Stretching
+                                </li>
+                            </ul>
+
+                            <a href="#" class="button button__flex pricing__button">
+                                Purchase Now <i class="ri-arrow-right-line"></i>
+                            </a>
+                        </article>
+                    </div>
+                </div>
             </section>
         </main>
 
