--- a/index.html
+++ b/index.html
@@ -372,7 +372,99 @@
 
     <!--==================== FOOTER ====================-->
     <footer class="footer section" id="footer">
+        <div class="footer__container container grid">
+            <div>
+                <a href="#"class="footer__logo">
+                    <img src="./assets/img/logo-nav.png" alt="">BEROTOT
+                </a>
+                <p class="footer__description">Subscribe for company <br> updates below.
+                </p>
 
+                <form action="" class="footer__form" id="contact-form">
+                    <input type="email" name="user_email" placeholder="Your Email" class="footer__input" id="contact-user">
+                    <button type="submit"class="button">Subscribe</button>
+                </form>
+
+                <p class="footer__message" id="contact-message"></p>
+            </div>
+
+            <div class="div footer__content">
+                <div>
+                    <h3 class="footer__title">
+                        SERVICES
+                    </h3>
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__links">Flex Muscle</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Cardio Exercise</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Basic Yoga</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Weight Lifting</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="footer__title">
+                        PRICING
+                    </h3>
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__links">Basic</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Premium</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Diamond</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="footer__title">
+                        COMPANY
+                    </h3>
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__links">About Us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Customers</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__links">Partners</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="footer__group">
+                <ul class="footer__social">
+                    <a href="https://www.facebook.com/" class="footer__social-link">
+                        <i class="ri-facebook-circle-fill"></i>
+                    </a>
+                    <a href="https://twitter.com/" class="footer__social-link">
+                        <i class="ri-twitter-fill"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" class="footer__social-link">
+                        <i class="ri-instagram-line"></i>
+                    </a>
+                </ul>
+
+                <span class="footer__copy">
+                    &#169; Copyright Bedimcode. All rights reserved
+                </span>
+            </div>
+        </div>
     </footer>
 
     <!--========== SCROLL UP ==========-->
@@ -382,6 +474,7 @@
     <script src=""></script>
 
     <!--=============== EMAIL JS ===============-->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
 
     <!--=============== MAIN JS ===============-->
