--- a/index.html
+++ b/index.html
@@ -118,9 +118,6 @@
                             <i class="ri-arrow-right-line"></i>
                         </a>
                     </article>
-                </div>
-
-                <div class="program__container grid">
                     <article class="program__card">
                         <div class="program__shape">
                             <img src="assets/img/program2.png" alt="program image" class="program__img">
@@ -135,9 +132,6 @@
                             <i class="ri-arrow-right-line"></i>
                         </a>
                     </article>
-                </div>
-
-                <div class="program__container grid">
                     <article class="program__card">
                         <div class="program__shape">
                             <img src="assets/img/program3.png" alt="program image" class="program__img">
@@ -152,9 +146,6 @@
                             <i class="ri-arrow-right-line"></i>
                         </a>
                     </article>
-                </div>
-
-                <div class="program__container grid">
                     <article class="program__card">
                         <div class="program__shape">
                             <img src="assets/img/program4.png" alt="program image" class="program__img">
@@ -468,7 +459,9 @@
     </footer>
 
     <!--========== SCROLL UP ==========-->
-
+    <a href="#" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-line"></i>
+    </a>
 
     <!--=============== SCROLLREVEAL ===============-->
     <script src=""></script>
